force-app/main/default/objects/ContentVersion/fields/HelloSign__Is_Final_Signed_Doc__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Is_Final_Signed_Doc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field on the ContentVersion record indicating the doc is the final signed PDF from Dropbox Sign</description>
    <label>Is Final Signed Doc</label>
    <type>Checkbox</type>
</CustomField>