force-app/main/default/objects/ContentVersion/fields/HelloSign__Template_File_Order__c.field-meta.xml
<CustomField>
    <fullName>HelloSign__Template_File_Order__c</fullName>
    <description>Field to maintain file order on templates</description>
    <label>Template File Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>