force-app/main/default/objects/ContentVersion/fields/ONB2__AmazonS3TransferStatus__c.field-meta.xml
<CustomField>
    <fullName>ONB2__AmazonS3TransferStatus__c</fullName>
    <description>The global transfer status regarding the upload to Amazon S3.</description>
    <inlineHelpText>The global transfer status regarding the upload to Amazon S3.</inlineHelpText>
    <label>Amazon S3 Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>