force-app/main/default/objects/ContentVersion/fields/ONB2__BaswareFileReference__c.field-meta.xml
<CustomField>
    <fullName>ONB2__BaswareFileReference__c</fullName>
    <description>The reference of this file in the Basware system.</description>
    <externalId>true</externalId>
    <inlineHelpText>The reference of this file in the Basware system.</inlineHelpText>
    <label>Basware File Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>