force-app/main/default/objects/ContentVersion/fields/ONB2__ExternalTargets__c.field-meta.xml
<CustomField>
    <fullName>ONB2__ExternalTargets__c</fullName>
    <description>Stores information regarding the transfer status to external cloud storages.</description>
    <inlineHelpText>Stores information regarding the transfer status to external cloud storages.</inlineHelpText>
    <label>External Targets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>