force-app/main/default/objects/ContentVersion/fields/ONB2__GoogleDriveTransferStatus__c.field-meta.xml
<CustomField>
    <fullName>ONB2__GoogleDriveTransferStatus__c</fullName>
    <description>The global transfer status regarding the upload to Google Drive.</description>
    <inlineHelpText>The global transfer status regarding the upload to Google Drive.</inlineHelpText>
    <label>Google Drive Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Redistribute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>