force-app/main/default/objects/ContentVersion/fields/ONB2__RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>ONB2__RelatedRecord__c</fullName>
    <description>The id of the record, which is the cause or directly related to this content version.</description>
    <externalId>true</externalId>
    <inlineHelpText>The id of the record, which is the cause or directly related to this content version.</inlineHelpText>
    <label>Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>