force-app/main/default/objects/ContentVersion/fields/ONB2__Type__c.field-meta.xml
<CustomField>
    <fullName>ONB2__Type__c</fullName>
    <description>The type of this file in the context of JustOn.</description>
    <inlineHelpText>The type of this file in the context of JustOn.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice PDF</fullName>
            </value>
            <value>
                <fullName>Dunning PDF</fullName>
            </value>
            <value>
                <fullName>Booking Detail Export</fullName>
            </value>
            <value>
                <fullName>Invoice Export</fullName>
            </value>
            <value>
                <fullName>Template Logo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>